derive/test/compile_fail/enum_dynamic_unindexed_variants.stderr
error: dynamic enums don't have variants
 --> compile_fail/enum_dynamic_unindexed_variants.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Value` (in Nightly builds, run with -Z macro-backtrace for more info)
